[package]
name = "sqd-bootnode"
license = "AGPL-3.0-or-later"
version = "1.0.3"
edition = "2021"

[[bin]]
name = "sqd-bootnode"
path = "src/main.rs"

[lib]
name = "sqld_bootnode"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
lazy_static = "1.4"
libp2p = { workspace = true, features = ["dns", "tokio", "identify", "kad", "ping", "autonat", "quic"] }
libp2p-connection-limits = { workspace = true }
libp2p-swarm-derive = { workspace = true }
log = "0.4"
prometheus-client = "0.22"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower = { version = "0.4", features = ["timeout"] }

sqd-contract-client = { path = "../contract-client" }
sqd-network-transport = { path = "../transport", features = ["behaviour"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6" }

[dev-dependencies]
tokio-test = "0.4"
tower = "0.4"
hyper = "1.0"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "performance_tests"
harness = false

[lints]
workspace = true
